--- a/carscollector/main_app/templates/base.html
+++ b/carscollector/main_app/templates/base.html
@@ -17,8 +17,9 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Home</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/cars">View All Cars</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'cars_create' %}">Add a Car</a></li>
+          <li><a href="{% url 'index' %}">View All Cars</a></li>
         </ul>
       </div>
     </nav>
