--- a/carscollector/main_app/templates/cars/index.html
+++ b/carscollector/main_app/templates/cars/index.html
@@ -5,11 +5,13 @@
 
 {% for car in cars %}
   <div class="card">
+    <a href="{% url 'detail' car.id %}">
     <div class="card-content">
       <span class="card-title">{{ car.name }}</span>
       <p>Brand: {{ car.brand }}</p>
       <p>Description: {{ car.description }}</p>
     </div>
+    </a>
   </div>
 {% endfor %}
 
